<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEntryDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            style="@style/AlertDialog_textview"
            android:layout_height="match_parent"
            android:text="@string/amount_str" />

        <EditText
            android:id="@+id/amount_diag"
            style="@style/AlertDialog_edittext"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            style="@style/AlertDialog_textview"
            android:layout_height="match_parent"
            android:text="@string/item_spend_str" />

        <EditText
            android:id="@+id/item_spend_diag"
            style="@style/AlertDialog_edittext"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            style="@style/AlertDialog_textview"
            android:layout_height="match_parent"
            android:text="@string/desc_str" />

        <EditText
            android:id="@+id/desc_diag"
            style="@style/AlertDialog_edittext"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/optional_hint"
            android:inputType="textLongMessage"
            android:maxLength="50" />
    </LinearLayout>
</LinearLayout>